--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
       <h3 id="status" class="btn btn-warning"></h3>
       <br><br>
       <div id="canvas"></div>
+      <br><br>
+      <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">Restart</button>
 
       <div id="myModal" class="modal fade">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <button class="close" data-dismiss="modal">&times;</button>
-              <h4 id="h1">Instructions</h4>
+              <h4 id="h2">Instructions</h4>
+              <div class="modal-body">
+                <h3>1. First keep your laptop screen straight</h3>
+                <h3>2. Move yourself approximately 3-4 feet away from the laptop</h3>
+                <h3>3. Move your right wrist in an ascending and descending manner, a red dot should appear on your right wrist</h3>
+                <h3>4. Now press the play button, and again move yourself 3-4 feet away from the laptop</h3>
+                <h3>5. The red paddle is your paddle, That will move as per the movement of your right wrist</h3>
+              </div>
             </div>
         </div>
         </div>
